--- a/nginx.conf
+++ b/nginx.conf
@@ -7,11 +7,41 @@ events {
 
 http {
     server {
-        listen 80;
+        listen      80;
         server_name 87.228.76.2;
+        # root /home/FANTASTICHACK2025/frontend/front/dist/;
+        client_max_body_size 100m;
+
+        location = /favicon.ico { 
+            access_log off; 
+            log_not_found off; 
+        }
 
         location / {
+            include proxy_params;
             proxy_pass http://frontend:8080/;
         }
+
+        # location /static {
+        #     alias /home/sasha/myprojectdir/myproject/static;
+        # }
+
+        # location /media {
+        #     alias /home/sasha/myprojectdir/myproject/media;
+        # }
+
+        # location / {
+        #     try_files $uri $uri/ /index.html;
+        # }
+
+        location /api/ {
+            include proxy_params;
+            proxy_pass http://unix:/run/gunicorn.sock;
+        }
+
+        location /admin {
+            include proxy_params;
+            proxy_pass http://unix:/run/gunicorn.sock;
+        }
     }
-}
+} 
