Dev commit nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,13 +21,13 @@ http {
             proxy_pass http://frontend:8080/;
         }
 
-        # location /static {
-        #     alias /home/sasha/myprojectdir/myproject/static;
-        # }
+        location /static {
+            alias /root/FANTASTICHACK2025/frontend/front/src/assets/;
+        }
 
-        # location /media {
-        #     alias /home/sasha/myprojectdir/myproject/media;
-        # }
+        location /media {
+            alias /root/FANTASTICHACK2025/frontend/front/src/assets/img/;
+        }
 
         # location / {
         #     try_files $uri $uri/ /index.html;
@@ -37,7 +37,7 @@ http {
             proxy_pass http://unix:/run/gunicorn.sock;
         }
 
-        location /admin {
+        location /admin/ {
             proxy_pass http://unix:/run/gunicorn.sock;
         }
     }
