--- a/nginx.conf
+++ b/nginx.conf
@@ -1,44 +1,38 @@
 user root;
 worker_processes 1;
 
-events {
-
+upstream django {
+    server unix:/etc/systemd/system/gunicorn.sock;
 }
 
 http {
     server {
-        listen      80;
+        listen 80;
         server_name 87.228.76.2;
-        # root /home/FANTASTICHACK2025/frontend/front/dist/;
-        client_max_body_size 100m;
 
-        location = /favicon.ico { 
-            access_log off; 
-            log_not_found off; 
+        location /django_static/ {
+            alias /root/FANTASTICHACK2025/backend/hack/static/;
+            expires 365d;
+            add_header Cache-Control "public";
+        }
+
+        location /media/ {
+            alias /root/FANTASTICHACK2025/backend/hack/media/;
+            expires 30d;
+        }
+
+        location /api/ {
+            include proxy_params;
+            proxy_pass http://django;
+        }
+
+        location /admin/ {
+            include proxy_params;
+            proxy_pass http://django;
         }
 
         location / {
             proxy_pass http://frontend:8080/;
         }
-
-        location /static {
-            alias /root/FANTASTICHACK2025/frontend/front/src/assets/;
-        }
-
-        location /media {
-            alias /root/FANTASTICHACK2025/frontend/front/src/assets/img/;
-        }
-
-        # location / {
-        #     try_files $uri $uri/ /index.html;
-        # }
-
-        location /api/ {
-            proxy_pass http://unix:/run/gunicorn.sock;
-        }
-
-        location /admin/ {
-            proxy_pass http://unix:/run/gunicorn.sock;
-        }
     }
-} 
+}
