--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ user root;
 worker_processes 1;
 
 upstream django {
-    server unix:/etc/systemd/system/gunicorn.sock;
+    server backend:8000;
 }
 
 http {
@@ -10,25 +10,25 @@ http {
         listen 80;
         server_name 87.228.76.2;
 
-        location /django_static/ {
+        location /static/ {
             alias /root/FANTASTICHACK2025/backend/hack/static/;
-            expires 365d;
-            add_header Cache-Control "public";
         }
 
         location /media/ {
             alias /root/FANTASTICHACK2025/backend/hack/media/;
-            expires 30d;
         }
 
         location /api/ {
-            include proxy_params;
-            proxy_pass http://django;
+            proxy_pass http://backend:8000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location /admin/ {
-            include proxy_params;
-            proxy_pass http://django;
+            proxy_pass http://backend:8000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location / {
