--- a/compose.yml
+++ b/compose.yml
@@ -4,7 +4,7 @@ networks:
 services:
   backend:
     build: ./backend/hack/
-    command: gunicorn --workers 3 --bind 0.0.0.0:8000 project.wsgi:application
+    command: gunicorn --workers 3 --bind 0.0.0.0:8000 back.wsgi:application
     volumes:
       - ./backend/hack:/app
       - static_volume:/backend/hack/static
