--- a/compose.yml
+++ b/compose.yml
@@ -25,10 +25,10 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - frontend
-      - backend
+      - backend 
     networks:
       - net
     restart: unless-stopped
