--- a/compose.yml
+++ b/compose.yml
@@ -16,6 +16,9 @@ services:
     build:
       context: ./frontend/front/
       dockerfile: Dockerfile
+    volumes:
+      - ./frontend/front/dist:/usr/share/nginx/html
+      - ./frontend/front/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - net
     restart: unless-stopped
