--- a/backend/hack/Dockerfile
+++ b/backend/hack/Dockerfile
@@ -1,18 +1,42 @@
-FROM python:3.11-slim
+# FROM python:3.11-slim
 
-ENV PYTHONUNBUFFERED=1
-ENV PYTHONDONTWRITEBYCODE=1
+# ENV PYTHONUNBUFFERED=1
+# ENV PYTHONDONTWRITEBYCODE=1
+
+# RUN apt-get update && apt-get install -y \
+#     build-essential \
+#     libpq-dev \
+#     && rm -rf /var/lib/apt/lists/*
+
+# COPY requirements.txt .
+
+# RUN pip install --upgrade pip
+# RUN pip install -r requirements.txt
+
+# COPY . . 
+
+# EXPOSE 8000
+
+FROM python:3.9-slim
+
+WORKDIR /app
+
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
 
 RUN apt-get update && apt-get install -y \
-    build-essential \
+    gcc \
+    python3-dev \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
+RUN pip install djangorestframework django-cors-headers
+
 COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+COPY . .
 
-COPY . . 
+RUN python manage.py collectstatic --noinput
 
 EXPOSE 8000
