--- a/nginx.conf
+++ b/nginx.conf
@@ -1,35 +1,42 @@
-upstream django {
-    server backend:8000;
+events {
+    worker_connections 1024;
 }
 
 http {
+    upstream backend {
+        server backend:8000;
+    }
+
     server {
         listen 80;
-        server_name 87.228.76.2;
+        server_name localhost;
 
-        location /static/ {
-            alias /root/FANTASTICHACK2025/backend/hack/static/;
+        location / {
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html =404;
         }
 
-        location /media/ {
-            alias /root/FANTASTICHACK2025/backend/hack/media/;
-        }
-
-        location /api/ {
-            proxy_pass http://backend:8000/;
+        location /api {
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        location /admin/ {
-            proxy_pass http://backend:8000/;
+        location /admin {
+            proxy_pass http://backend;
             proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        location / {
-            proxy_pass http://frontend:8080/;
+        location /static/ {
+            alias /usr/share/nginx/html/static/;
+            expires 30d;
+        }
+
+        location /media/ {
+            alias /usr/share/nginx/html/media/;
+            expires 30d;
         }
     }
 }
