--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name 87.228.76.2;
 
         location / {
             root /usr/share/nginx/html;
