--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,25 @@
+networks:
+  net:
+
 services:
+  db:
+    image: postgres:17.4
+    # command: postgres -c 'max_connections=1000'  # Явный запуск
+    environment:
+      POSTGRES_DB: stats
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d stats"]
+      interval: 5s
+      timeout: 5s
+      retries: 15
+    restart: unless-stopped
+    networks:
+      - net
+
   backend:
     build: ./backend/hack
     volumes:
@@ -7,32 +28,44 @@ services:
     expose:
       - "8000"
     environment:
-      - DJANGO_SETTINGS_MODULE=hack.settings
-    restart: unless-stopped
+      DJANGO_SETTINGS_MODULE: hack.settings
+      POSTGRES_NAME: stats
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
+      POSTGRES_HOST: db
+      POSTGRES_PORT: 5432
+    depends_on:
+      db:
+        condition: service_healthy
+    # restart: unless-stopped
+    networks:
+      - net
 
   frontend:
     build: ./frontend/front
     environment:
-      BACKEND_HOST: backend
+      - BACKEND_HOST=backend
     volumes:
-      - ./frontend/front/dist:/usr/share/nginx/html
-      - ./frontend/front/nginx.conf.template:/etc/nginx/templates/nginx.conf.template
-    expose:
-      - "80"
-    restart: unless-stopped
+      - ./frontend/front/dist:/usr/share/nginx/html:ro
+    depends_on:
+      - backend
+    networks:
+      - net
 
   nginx:
     image: nginx:alpine
     ports:
       - "80:80"
-      - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
       - ./frontend/front/dist:/usr/share/nginx/html
       - ./backend/hack/static:/usr/share/nginx/html/static
       - ./backend/hack/media:/usr/share/nginx/html/media
     depends_on:
       - backend
       - frontend
-    restart: unless-stopped
+    networks:
+      - net
+
+volumes:
+  postgres_data:
   
