--- a/frontend/front/Dockerfile
+++ b/frontend/front/Dockerfile
@@ -12,8 +12,11 @@ RUN rm -f /etc/nginx/conf.d/default.conf
 
 COPY --from=build /app/dist /usr/share/nginx/html   
 
-COPY nginx.conf.templates /etc/nginx/templates/
+COPY nginx.conf /etc/nginx/nginx.conf
 
-EXPOSE 8080
+RUN chown -R nginx:nginx /usr/share/nginx/html && \
+    chmod -R 755 /usr/share/nginx/html
+
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
