--- a/backend/hack/Dockerfile
+++ b/backend/hack/Dockerfile
@@ -20,4 +20,4 @@ COPY . .
 
 RUN python manage.py collectstatic --noinput
 
-EXPOSE 8000
+CMD [ "gunicorn", "--bind", "0.0.0.0:8000", "--workers", "4", "hack.wsgi:application" ]
