--- a/frontend/front/Dockerfile
+++ b/frontend/front/Dockerfile
@@ -12,7 +12,7 @@ RUN rm -f /etc/nginx/conf.d/default.conf
 
 COPY --from=build /app/dist /usr/share/nginx/html   
 
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY ../../nginx.conf /etc/nginx/nginx.conf
 
 RUN chown -R nginx:nginx /usr/share/nginx/html && \
     chmod -R 755 /usr/share/nginx/html
