--- a/compose.yml
+++ b/compose.yml
@@ -24,11 +24,14 @@ services:
     build: ./backend/hack
     volumes:
       - ./backend/hack:/app
+      - ./static_volume:/app/static
     command: gunicorn --pythonpath /app hack.wsgi:application --bind 0.0.0.0:8000
     expose:
       - "8000"
     environment:
       DJANGO_SETTINGS_MODULE: hack.settings
+      ALLOWED_HOSTS: "*"
+      DATABASE_URL: postgres://postgres:123@db:5432/stats
       POSTGRES_NAME: stats
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
@@ -53,13 +56,16 @@ services:
       - net
 
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     ports:
       - "80:80"
     volumes:
       - ./frontend/front/dist:/usr/share/nginx/html
-      - ./backend/hack/static:/usr/share/nginx/html/static
-      - ./backend/hack/media:/usr/share/nginx/html/media
+      - static_volume:/usr/share/nginx/html/static
+      - media_volume:/usr/share/nginx/html/media
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - backend
       - frontend
@@ -68,5 +74,7 @@ services:
 
 volumes:
   postgres_data:
-    
+  static_volume:
+  media_volume:
+
   
