--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,35 +1,104 @@
 user nginx;
 worker_processes auto;
 
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
-
 events {
     worker_connections 1024;
 }
 
 http {
-    upstream django-backend {  # <-- Перенесено сюда
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    # Настройки кэширования
+    sendfile on;
+    keepalive_timeout 65;
+
+    # Upstream для Django бэкенда
+    upstream django-backend {
         server backend:8000;
     }
 
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
+    server {
+        listen 80;
+        server_name localhost;
 
-    access_log /var/log/nginx/access.log main;
+        # Корень для статики Vue.js
+        root /usr/share/nginx/html;
+        index index.html;
 
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    server_tokens off;
-    client_max_body_size 100M;
+        # Обработка статики фронтенда
+        location / {
+            try_files $uri $uri/ /index.html;
+            add_header Cache-Control "no-cache, no-store";
+        }
 
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml;
+        # Проксирование API запросов
+        location /api/ {
+            proxy_pass http://django-backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-    include /etc/nginx/conf.d/*.conf;
+        location /api/race/ {
+            proxy_pass http://django-backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /admin/ {
+            proxy_pass http://django-backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 300s;
+
+            proxy_read_timeout 300s;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+        }
+
+    # Генератор данных
+        location /api/generate {
+            proxy_pass http://django-backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+                # Специфичные настройки для генератор
+        }
+
+        location /api/person/ {
+            proxy_pass http://django-backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Статика Django
+        location /static/ {
+            alias /usr/share/nginx/html/static/;
+            expires 30d;
+            access_log off;
+        }
+
+        # Медиафайлы Django
+        location /media/ {
+            alias /usr/share/nginx/html/media/;
+            expires 30d;
+            access_log off;
+        }
+
+        # Ошибки
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
+    }
 }
