--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -8,4 +8,5 @@ COPY nginx.conf /etc/nginx/nginx.conf
 COPY conf.d/app.conf /etc/nginx/conf.d/app.conf
 
 # Права для статики
-RUN chown -R nginx:nginx /usr/share/nginx/html
+RUN chown -R nginx:nginx /usr/share/nginx/html && \
+    chmod -R 755 /usr/share/nginx/html
