--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,7 @@ http {
         location / {
             try_files $uri $uri/ /index.html;
             add_header Cache-Control "no-cache, no-store";
+
         }
 
         # Проксирование API запросов
@@ -42,11 +43,44 @@ http {
         }
 
         location /api/race/ {
-            proxy_pass http://django-backend;
+            proxy_pass http://django-backend/api/race/;
+            
+            # Основные настройки прокси
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Критически важные настройки для SSE
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_read_timeout 86400s;  # 24 часа
+            proxy_send_timeout 86400s;
+            
+            # Поддержка длинных соединений
+            proxy_set_header Connection '';
+            chunked_transfer_encoding off;
+            
+            # CORS заголовки
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+            
+            # Отключаем кэширование
+            add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+            expires off;
+            
+            # Обработка OPTIONS запросов для CORS
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
         }
 
         location /admin/ {
@@ -62,8 +96,21 @@ http {
             proxy_buffers 4 256k;
         }
 
+        location /admin/login/?next=/admin/ {
+            proxy_pass http://django-backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 300s;
+
+            proxy_read_timeout 300s;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+        }
+
     # Генератор данных
-        location /api/generate {
+        location /api/generate/ {
             proxy_pass http://django-backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -74,11 +121,25 @@ http {
         }
 
         location /api/person/ {
-            proxy_pass http://django-backend;
+            proxy_pass http://django-backend/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/persons/ {
+            proxy_pass http://django-backend/admin/runs/person/;
+            proxy_set_header Host $host;
+            
+            # Критически важно для SSE
+            proxy_buffering off;
+            proxy_read_timeout 24h;
+            proxy_set_header Connection '';
+            
+            # Для крос-доменных запросов
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Cache-Control' 'no-cache';
         }
 
         # Статика Django
