--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,7 +20,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name 87.228.79.4;
 
         # Корень для статики Vue.js
         root /usr/share/nginx/html;
